--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "expenses",
     "version": "0.1.0",
+    "node": "14.15.1",
     "private": true,
     "dependencies": {
         "@material-ui/core": "^4.12.4",
